@@ -22,6 +22,9 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.44.2.2  2005/03/06 19:32:45  jimmyo
+# Make sure all rrd-tunes are correct after an upgrade (Deb#296454, Deb#296645).
+#
 # Revision 1.44.2.1  2005/02/01 22:02:30  jimmyo
 # Added category_order, to complete the *_order options.
 #
@@ -262,6 +265,8 @@ use Symbol 'gensym';
 
 my $nsca = new IO::Handle;
 my $config = undef;
+
+my $VERSION = "@@VERSION@@";
 
 my $DEBUG=0;
 my $configfile="@@CONFDIR@@/munin.conf";
@@ -658,7 +663,7 @@ sub munin_writeconfig_loop {
     my ($data,$fh,$pre) = @_;
     $pre |= "";
 
-    # Write datafile in new format
+    # Write datafile
     foreach my $a (keys %{$data})
     {
 	if (ref ($data->{$a}) eq "HASH")
@@ -715,7 +720,9 @@ sub munin_writeconfig {
 	}
     }
 
-    # Write datafile in new format
+    # Write version
+    print $fh "version $VERSION\n";
+    # Write datafile
     &munin_writeconfig_loop ($data, $fh, "");
     
     if (defined $fh)
