@@ -23,6 +23,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.28.2.1  2005/03/06 19:32:45  jimmyo
+# Make sure all rrd-tunes are correct after an upgrade (Deb#296454, Deb#296645).
+#
 # Revision 1.28  2004/12/10 09:12:13  jimmyo
 # Fix bug when setting min to 0.
 #
@@ -454,20 +457,27 @@ sub compare_configs {
 		foreach my $field (%{$new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}})
 		{
 		    next unless $field =~ /\.label$/;
+    my $just_upgraded = 0;
+
+    if (!defined $old->{version} or
+	    $old->{version} ne $VERSION)
+    {
+	$just_upgraded = 1;
+    }
 		    $field =~ s/\.label$//;
-		    if (&is_changed ($old, $new, $dom, $host, $serv, $field, "max"))
+		    if ($just_upgraded or &is_changed ($old, $new, $dom, $host, $serv, $field, "max"))
 		    {
 			&change_max ($config, $dom, $host, $serv, $field, 
 				(defined $new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}->{$field.".max"} ?
 				 $new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}->{$field.".max"} : undef));
 		    }
-		    if (&is_changed ($old, $new, $dom, $host, $serv, $field, "min"))
+		    if ($just_upgraded or &is_changed ($old, $new, $dom, $host, $serv, $field, "min"))
 		    {
 			&change_min ($config, $dom, $host, $serv, $field, 
 				(defined $new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}->{$field.".min"} ?
 				$new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}->{$field.".min"} : undef));
 		    }
-		    if (&is_changed ($old, $new, $dom, $host, $serv, $field, "type"))
+		    if ($just_upgraded or &is_changed ($old, $new, $dom, $host, $serv, $field, "type"))
 		    {
 			&change_type ($oldconfig, $config, $dom, $host, $serv, $field, 
 				(defined $new->{domain}->{$dom}->{node}->{$host}->{client}->{$serv}->{$field.".type"} ?
